feat(ui): downport to MC 1.20.1 on multi/1.20.1-ui
Branch from multi/1.21, malilib recipe: release 17 (v65 trap), 1.20.1
toolchain, neoforge->forge module restored from old branch + CONFIG_SCREEN
registration, local malilib 1.20.1 jars.

Highlights:
- servux network stack rewritten onto malilib IPluginChannelHandler
  (servux:tweaks via ClientPacketChannelHandler/PacketSplitter; litematica
  CarpetHelloPacketHandler pattern); EntityDataManager/InventoryOverlay-
  Handler now read world BEs/entities directly (no IDataSyncer)
- MixinExtras dependency added for WrapOperation mixins
- vanilla API deltas fixed across ~30 files (recipes/components/NBT,
  mouseScrolled 3-arg, MatrixStack model-view + peek().getPositionMatrix()
  bridge to JOML helpers, EnchantmentHelper map iteration, camera presets
  DFU6, MACE/BREACH/DENSITY/SWEEPING_EDGE/BODY-armor removals)
- mixin config JAVA_17; metadata gates cleared; co-author added

Co-authored-by: sayukishiraishi@gmail.com